--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 body{
     font-family: 'Raleway', sans-serif;
+    font-weight: 700;
 }
 ul{
     list-style: none;
@@ -12,8 +13,51 @@ a{
     height: 100px;
     position: relative;
 }
-nav{
+nav{ 
+    width: 100%;
     display: flex;
     justify-content: space-around;
+    align-items: center;
+    position: fixed;
+}
+nav ul li{
+    list-style-type: none;
+    display: inline;
+    padding: 0 30px;
+}
+nav ul li a{
+    text-decoration:none;
+    display: inline-block;
+    font-weight: 500;
+}
+.movingunderline::after{
+    content: '';
+    display: block;
+    width: 0;
+    height:3px;
+    background-color: darkmagenta;
+    transition: 0.6s;
+}
+.movingunderline:hover::after{
+    width: 100%;
+}
+.mylogo{
+    width:30%;
+}
+.mylogo img{
+
+    margin-top: 10px;
+    width: 20%;
+    height: 15%;
+}
+.front-page-content{
+position: relative;
+width: 1290px;
+max-width: 90%;
+}
+.front-page header{
+    width: 100%;
+    height: 100px;
+    display:flex;
     align-items: center;
 }
