--- a/css/styles.css
+++ b/css/styles.css
@@ -61,3 +61,15 @@ max-width: 90%;
     display:flex;
     align-items: center;
 }
+.myphoto {
+width: 500px;
+height: 500px;
+}
+.myphoto img{
+    width: 100%;
+    height: 100%;
+}
+.homecontent{
+    width: 90%;
+    display: flex;
+}
