--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-body{
+/* body{ 
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
 }
@@ -18,7 +18,7 @@ nav{
     display: flex;
     justify-content: space-around;
     align-items: center;
-    position: fixed;
+    position:inherit;
 }
 nav ul li{
     list-style-type: none;
@@ -63,7 +63,7 @@ max-width: 90%;
 }
 .myphoto {
 width: 500px;
-height: 500px;
+height: 300px;
 }
 .myphoto img{
     width: 100%;
@@ -72,4 +72,20 @@ height: 500px;
 .homecontent{
     width: 90%;
     display: flex;
+    align-content: center;
+    justify-content:space-around;
+    position: absolute;
+}
+.hometext{
+width: 500px;
+}
+.hometext h1 {
+font-size: 40px;
+margin-left: 40px;
+}
+.hometext p {
+    display: flex;
+    margin-left: 40px;
+    align-content: center;
+    justify-items: center;
 }
